--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -1067,7 +1067,7 @@
    "source": [
     "# Even mixture of uniform priors over two rooms.\n",
     "\n",
-    "room_mixture = jnp.ones(2)\n",
+    "room_mixture = jnp.ones(2) / 2\n",
     "room1 = jnp.array([[12.83, 15.81], [11.19, 15.26], [-jnp.pi, +jnp.pi]])\n",
     "room2 = jnp.array([[15.73, 18.90], [ 5.79,  9.57], [-jnp.pi, +jnp.pi]])\n",
     "\n",
