Replace undocumented `sample`, `sampler` with `propose`

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -1413,7 +1413,7 @@
     "    grid_poses = make_poses_grid(world[\"bounding_box\"], N_grid)\n",
     "    posterior_densities = jax.vmap(jitted_posterior)(grid_poses)\n",
     "    def grid_sample_one(k):\n",
-    "        return grid_poses[genjax.categorical.sample(k, posterior_densities)]\n",
+    "        return grid_poses[genjax.categorical.propose(k, (posterior_densities,))[2]]\n",
     "\n",
     "    grid_samples = jax.vmap(grid_sample_one)(jax.random.split(k, N_samples))\n",
     "    widget.state.update({\n",
@@ -1472,7 +1472,7 @@
     "        k1, k2 = jax.random.split(k)\n",
     "        presamples = jax.vmap(random_pose)(jax.random.split(k1, N_presamples))\n",
     "        posterior_densities = jax.vmap(jitted_posterior)(presamples)\n",
-    "        return presamples[genjax.categorical.sample(k2, posterior_densities)]\n",
+    "        return presamples[genjax.categorical.propose(k2, (posterior_densities,))[2]]\n",
     "\n",
     "    grid_samples = jax.vmap(importance_resample_one)(jax.random.split(k, N_samples))\n",
     "    widget.state.update({\n",
@@ -1527,7 +1527,7 @@
     "        new_p_hd = jax.random.uniform(k1, shape=(3,), minval=mins, maxval=maxs)\n",
     "        new_pose = Pose(new_p_hd[0:2], new_p_hd[2])\n",
     "        new_posterior = jitted_posterior(new_pose)\n",
-    "        accept = (jnp.log(genjax.uniform.sample(k2)) <= new_posterior - posterior_density)\n",
+    "        accept = (jnp.log(genjax.uniform.propose(k2, ())[2]) <= new_posterior - posterior_density)\n",
     "        return (\n",
     "            jax.tree.map(\n",
     "                lambda x, y: jnp.where(accept, x, y),\n",
@@ -2956,9 +2956,9 @@
     "    samples, log_weights = jax.vmap(model_importance, in_axes=(0, None, None))(\n",
     "        jax.random.split(key1, N * K), constraints, (motion_settings, s_noise)\n",
     "    )\n",
-    "    winners = jax.vmap(genjax.categorical.sampler)(\n",
-    "        jax.random.split(key2, K), jnp.reshape(log_weights, (K, N))\n",
-    "    )\n",
+    "    winners = jax.vmap(genjax.categorical.propose)(\n",
+    "        jax.random.split(key2, K), (jnp.reshape(log_weights, (K, N)),)\n",
+    "    )[2]\n",
     "    # indices returned are relative to the start of the K-segment from which they were drawn.\n",
     "    # globalize the indices by adding back the index of the start of each segment.\n",
     "    winners += jnp.arange(0, N * K, N)\n",
@@ -3181,9 +3181,9 @@
     "            samples, log_weight_increments = jax.vmap(self.importance, in_axes=(0, 0, None, None))(\n",
     "                ks[0], particles, control, observation\n",
     "            )\n",
-    "            indices = jax.vmap(genjax.categorical.sampler, in_axes=(0, None))(\n",
-    "                ks[1], log_weights + log_weight_increments\n",
-    "            )\n",
+    "            indices = jax.vmap(genjax.categorical.propose, in_axes=(0, None))(\n",
+    "                ks[1], (log_weights + log_weight_increments,)\n",
+    "            )[2]\n",
     "            (resamples, antecedents) = jax.tree.map(lambda v: v[indices], (samples, particles))\n",
     "            if self.rejuvenate:\n",
     "                rejuvenated, new_log_weights = jax.vmap(self.rejuvenate, in_axes=(0, 0, 0, None, None))(\n",
