--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "# Global setup code\n",
+    "# Global includes\n",
     "\n",
     "import json\n",
     "import genstudio.plot as Plot\n",
@@ -168,7 +168,7 @@
    "source": [
     "# Specific example code here\n",
     "\n",
-    "world = load_world(\"world.json\");"
+    "world = load_world(\"world.json\")"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "outputs": [],
    "source": [
     "def pose_wings(pose, opts={}):\n",
-    "    return Plot.line(js(f\"\"\"\n",
+    "    return Plot.line(js(\"\"\"\n",
     "                   const pose = %1;\n",
     "                   let positions = pose.p;\n",
     "                   let angles = pose.hd;\n",
@@ -342,7 +342,7 @@
     "                **opts)\n",
     "\n",
     "def pose_body(pose, opts={}):\n",
-    "    return Plot.dot(js(f\"typeof %1.hd === 'number' ? [%1.p] : %1.p\", pose), {\"r\": 4} | opts)\n",
+    "    return Plot.dot(js(\"typeof %1.hd === 'number' ? [%1.p] : %1.p\", pose), {\"r\": 4} | opts)\n",
     "\n",
     "def pose_plots(poses, wing_opts={}, body_opts={}, **opts):\n",
     "    \"\"\"\n",
@@ -472,9 +472,9 @@
     "        jnp.abs(det) < PARALLEL_TOL,\n",
     "        jnp.array([jnp.nan, jnp.nan]),\n",
     "        jnp.array([\n",
-    "            (segdp[0] * pq[1] - segdp[1] * pq[0]) / det,\n",
-    "            (pdp[0] * pq[1] - pdp[1] * pq[0]) / det\n",
-    "        ])\n",
+    "            segdp[0] * pq[1] - segdp[1] * pq[0],\n",
+    "              pdp[0] * pq[1] -   pdp[1] * pq[0]\n",
+    "        ]) / det\n",
     "    )\n",
     "    return jnp.where(\n",
     "        (st[0] >= 0.0) & (st[1] >= 0.0) & (st[1] <= 1.0),\n",
@@ -560,8 +560,6 @@
     "        (label + \"_readings\"): ideal_sensor(pose_at(widget.state, label))\n",
     "    })\n",
     "\n",
-    "def on_pose_change(widget, _):\n",
-    "    update_ideal_sensors(widget, \"pose\")\n",
     "\n",
     "(\n",
     "    (\n",
@@ -573,7 +571,9 @@
     "    | Plot.initialState({\n",
     "        \"pose_readings\": ideal_sensor(some_pose)\n",
     "    })\n",
-    "    | Plot.onChange({\"pose\": on_pose_change})\n",
+    "    | Plot.onChange({\n",
+    "        \"pose\": lambda widget, _: update_ideal_sensors(widget, \"pose\")\n",
+    "    })\n",
     ")"
    ]
   },
@@ -1593,7 +1593,6 @@
     "    Returns:\n",
     "    - tuple: A tuple containing the initial state, and the total number of control steps.\n",
     "    \"\"\"\n",
-    "    # TODO: change these to urlopen when the repo becomes public\n",
     "    robot_program = load_file(file_name)\n",
     "\n",
     "    start = Pose(\n",
@@ -3273,7 +3272,7 @@
     "N_particles = 100\n",
     "\n",
     "def pose_list_to_plural_pose(pl: list[Pose]) -> Pose:\n",
-    "    return Pose(jnp.array([pose.p for pose in pl]), [pose.hd for pose in pl])\n",
+    "    return \n",
     "\n",
     "key, sub_key = jax.random.split(key)\n",
     "smc_result = localization_sis(\n",
@@ -3285,8 +3284,12 @@
     "        world_plot\n",
     "        + path_to_polyline(ground_truth, stroke=\"blue\", strokeWidth=2)\n",
     "        + [\n",
-    "            path_to_polyline(pose_list_to_plural_pose(p), opacity=0.1, stroke=\"green\")\n",
-    "            for p in smc_result.flood_fill()\n",
+    "            path_to_polyline(\n",
+    "                Pose(jnp.array([pose.p for pose in poses]), [pose.hd for pose in poses]),\n",
+    "                opacity=0.1,\n",
+    "                stroke=\"green\"\n",
+    "            )\n",
+    "            for poses in smc_result.flood_fill()\n",
     "        ]\n",
     "    )\n",
     "\n",
