--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -561,6 +561,7 @@
     "    })\n",
     "\n",
     "\n",
+    "some_pose = Pose(jnp.array([6.0, 15.0]), jnp.array(0.0))\n",
     "(\n",
     "    (\n",
     "        world_plot\n",
@@ -666,6 +667,7 @@
    "outputs": [],
    "source": [
     "key, sub_key = jax.random.split(key)\n",
+    "some_pose = Pose(jnp.array([6.0, 15.0]), jnp.array(0.0))\n",
     "cm, score, retval = sensor_model_one.propose(sub_key, (some_pose, sensor_angles[0], sensor_settings[\"s_noise\"]))\n",
     "retval"
    ]
@@ -714,6 +716,7 @@
    "outputs": [],
    "source": [
     "key, sub_key = jax.random.split(key)\n",
+    "some_pose = Pose(jnp.array([6.0, 15.0]), jnp.array(0.0))\n",
     "cm, score, retval = sensor_model.propose(sub_key, (some_pose, sensor_angles, sensor_settings[\"s_noise\"]))\n",
     "retval"
    ]
@@ -794,6 +797,7 @@
     "    update_noisy_sensors(widget, \"pose\", \"noise_slider\")\n",
     "\n",
     "key, k1, k2 = jax.random.split(key, 3)\n",
+    "some_pose = Pose(jnp.array([6.0, 15.0]), jnp.array(0.0))\n",
     "(\n",
     "    (\n",
     "        world_plot\n",
@@ -855,6 +859,7 @@
    },
    "outputs": [],
    "source": [
+    "some_pose = Pose(jnp.array([6.0, 15.0]), jnp.array(0.0))\n",
     "score, retval = sensor_model.assess(cm, (some_pose, sensor_angles, sensor_settings[\"s_noise\"]))\n",
     "jnp.exp(score)"
    ]
@@ -2081,8 +2086,7 @@
     "def full_model(motion_settings, s_noise):\n",
     "    return (\n",
     "        full_model_kernel\n",
-    "        .partial_apply(motion_settings)\n",
-    "        .partial_apply(s_noise)\n",
+    "        .partial_apply(motion_settings, s_noise)\n",
     "        .map(diag)\n",
     "        .scan()(robot_inputs[\"start\"], robot_inputs[\"controls\"])\n",
     "        @ \"steps\"\n",
