Cleanup SIS result plot

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -3268,22 +3268,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "153",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "N_particles = 100\n",
-    "\n",
-    "def pose_list_to_plural_pose(pl: list[Pose]) -> Pose:\n",
-    "    return \n",
-    "\n",
-    "key, sub_key = jax.random.split(key)\n",
-    "smc_result = localization_sis(\n",
-    "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], observations_high_deviation\n",
-    ").run(sub_key, N_particles)\n",
-    "\n",
-    "def plot_sis_result(ground_truth, smc_result):\n",
+    "def plot_sis_result(ground_truth, sis_result):\n",
     "    return (\n",
     "        world_plot\n",
     "        + path_to_polyline(ground_truth, stroke=\"blue\", strokeWidth=2)\n",
@@ -3293,33 +3281,56 @@
     "                opacity=0.1,\n",
     "                stroke=\"green\"\n",
     "            )\n",
-    "            for poses in smc_result.flood_fill()\n",
+    "            for poses in sis_result.flood_fill()\n",
     "        ]\n",
-    "    )\n",
-    "\n",
-    "plot_sis_result(path_high_deviation, smc_result)"
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "154",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "N_particles = 100\n",
+    "\n",
+    "key, sub_key = jax.random.split(key)\n",
+    "sis_result = localization_sis(\n",
+    "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], observations_high_deviation\n",
+    ").run(sub_key, N_particles)\n",
+    "\n",
+    "(\n",
+    "    html([\"div\", \"SIS on high motion-deviation data\"])\n",
+    "    | plot_sis_result(path_high_deviation, sis_result)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "155",
    "metadata": {},
    "outputs": [],
    "source": [
     "N_particles = 20\n",
     "\n",
     "key, sub_key = jax.random.split(key)\n",
-    "low_smc_result = localization_sis(\n",
+    "sis_result = localization_sis(\n",
     "    motion_settings_low_deviation, sensor_settings[\"s_noise\"], observations_low_deviation\n",
     ").run(sub_key, N_particles)\n",
     "\n",
-    "plot_sis_result(path_low_deviation, low_smc_result)"
+    "(\n",
+    "    html([\"div\", \"SIS on low motion-deviation data\"])\n",
+    "    | plot_sis_result(path_low_deviation, sis_result)\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "155",
+   "id": "156",
    "metadata": {},
    "source": [
     "As already noted, after winnowing poor quality particles and replacing them with copies of the better ones, particle diversity suffers.  The technique of *rejuvenation* is to perturb the results of resampling to restore this diversity.  At the same time, it can perform operations that improve the sample quality.  In this case, we search a small grid of points near the most recent step for improvement in the score.\n",
@@ -3330,7 +3341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "156",
+   "id": "157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3398,7 +3409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "157",
+   "id": "158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3428,7 +3439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158",
+   "id": "159",
    "metadata": {},
    "source": [
     "The following plots compare the performance of this local grid search rejuvenation scheme (first) versus vanilla sequential importance sampling (second)."
@@ -3437,7 +3448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "159",
+   "id": "160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3446,14 +3457,22 @@
     "N_grid = jnp.array([15, 15, 15])\n",
     "\n",
     "key, sub_key = jax.random.split(key)\n",
-    "smc_result = localization_sis_plus_grid_rejuv(\n",
-    "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], M_grid, N_grid, observations_high_deviation\n",
-    ").run(sub_key, N_particles)\n",
-    "imp_result = localization_sis(\n",
+    "sis_result = localization_sis(\n",
     "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], observations_high_deviation\n",
     ").run(sub_key, N_particles)\n",
+    "smcp3_result = localization_sis_plus_grid_rejuv(\n",
+    "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], M_grid, N_grid, observations_high_deviation\n",
+    ").run(sub_key, N_particles)\n",
     "\n",
-    "plot_sis_result(path_high_deviation, smc_result) | plot_sis_result(path_high_deviation, imp_result)"
+    "(\n",
+    "    (\n",
+    "        html([\"div\", [\"p\", \"SIS per se (no rejuvenation)\"], [\"p\", \"high motion-deviation data\"]])\n",
+    "        | plot_sis_result(path_high_deviation, sis_result)\n",
+    "    ) & (\n",
+    "        html([\"div\", [\"p\", \"SIS with SMCP3 grid rejuvenation\"], [\"p\", \"high motion-deviation data\"]])\n",
+    "        | plot_sis_result(path_high_deviation, smcp3_result)\n",
+    "    )\n",
+    ")"
    ]
   }
  ],
