--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -1862,7 +1862,8 @@
     "\n",
     "\n",
     "# Set the motion settings\n",
-    "default_motion_settings = {\"p_noise\": 0.5, \"hd_noise\": 2 * jnp.pi / 36.0}"
+    "degrees = jnp.pi / 180\n",
+    "default_motion_settings = {\"p_noise\": 0.5, \"hd_noise\": 10.0 * degrees}"
    ]
   },
   {
@@ -2476,11 +2477,11 @@
     "\n",
     "motion_settings_low_deviation = {\n",
     "    \"p_noise\": 0.05,\n",
-    "    \"hd_noise\": (1 / 10.0) * 2 * jnp.pi / 360,\n",
+    "    \"hd_noise\": (1 / 10.0) * degrees,\n",
     "}\n",
     "motion_settings_high_deviation = {\n",
     "    \"p_noise\": 0.25,\n",
-    "    \"hd_noise\": 2 * jnp.pi / 360,\n",
+    "    \"hd_noise\": 1.0 * degrees,\n",
     "}\n",
     "\n",
     "key, k_low, k_high = jax.random.split(key, 3)\n",
@@ -3453,7 +3454,7 @@
    "outputs": [],
    "source": [
     "N_particles = 100\n",
-    "M_grid = jnp.array([0.5, 0.5, jnp.pi/600.0])\n",
+    "M_grid = jnp.array([0.5, 0.5, (3.0 / 10.0) * degrees])\n",
     "N_grid = jnp.array([15, 15, 15])\n",
     "\n",
     "key, sub_key = jax.random.split(key)\n",
