--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -119,7 +119,7 @@
     "    # Calculate bounding box, box size, and center point\n",
     "    bounding_box = jnp.array([[x_min, x_max], [y_min, y_max], [-jnp.pi, +jnp.pi]])\n",
     "    box_size = max(x_max - x_min, y_max - y_min)\n",
-    "    center_point = jnp.array([(x_min + x_max) / 2.0, (y_min + y_max) / 2.0])\n",
+    "    center_point = jnp.array([(x_min + x_max) / 2, (y_min + y_max) / 2])\n",
     "\n",
     "    return {\n",
     "            \"walls\": walls,\n",
@@ -477,7 +477,7 @@
     "        ]) / det\n",
     "    )\n",
     "    return jnp.where(\n",
-    "        (st[0] >= 0.0) & (st[1] >= 0.0) & (st[1] <= 1.0),\n",
+    "        (st[0] >= 0) & (st[1] >= 0) & (st[1] <= 1),\n",
     "        st[0],\n",
     "        jnp.inf\n",
     "    )"
@@ -499,7 +499,7 @@
     "def sensor_distance(pose, walls, box_size):\n",
     "    d = jnp.min(jax.vmap(distance, in_axes=(None, 0))(pose, walls))\n",
     "    # Capping to a finite value avoids issues below.\n",
-    "    return jnp.where(jnp.isinf(d), 2.0 * box_size, d)\n",
+    "    return jnp.where(jnp.isinf(d), 2 * box_size, d)\n",
     "\n",
     "# This represents a \"fan\" of sensor angles, with given field of vision, centered at angle 0.\n",
     "\n",
@@ -636,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensor_settings[\"s_noise\"] = 0.10\n",
+    "sensor_settings[\"s_noise\"] = 0.1\n",
     "\n",
     "@genjax.gen\n",
     "def sensor_model_one(pose, angle, s_noise):\n",
@@ -898,7 +898,7 @@
    "source": [
     "key, k1, k2, k3 = jax.random.split(key, 4)\n",
     "\n",
-    "guess_pose = Pose(jnp.array([2.0, 16]), jnp.array(0.0))\n",
+    "guess_pose = Pose(jnp.array([2.0, 16.0]), jnp.array(0.0))\n",
     "target_pose = Pose(jnp.array([15.0, 4.0]), jnp.array(-1.6))\n",
     "\n",
     "def likelihood_function(cm, pose, s_noise):\n",
@@ -1083,7 +1083,7 @@
     "\n",
     "def two_room_cm_builder(pose):\n",
     "    return (\n",
-    "        C[\"mixture_component\"].set(jnp.array(pose.p[1] < 10.0, int))\n",
+    "        C[\"mixture_component\"].set(jnp.array(pose.p[1] < 10, int))\n",
     "        | C[\"component_sample\", \"p_array\"].set(pose.as_array())\n",
     "    )"
    ]
@@ -1113,7 +1113,7 @@
    "outputs": [],
    "source": [
     "# Prior localized around a single pose\n",
-    "pose_for_localized_prior = Pose(jnp.array([2.0, 16]), jnp.array(0.0))\n",
+    "pose_for_localized_prior = Pose(jnp.array([2.0, 16.0]), jnp.array(0.0))\n",
     "spread_of_localized_prior = (0.1, 0.75)\n",
     "@genjax.gen\n",
     "def localized_prior():\n",
@@ -1331,7 +1331,7 @@
     "\n",
     "key, sub_key = jax.random.split(key)\n",
     "\n",
-    "camera_pose = Pose(jnp.array([2.0, 16]), jnp.array(0.0))\n",
+    "camera_pose = Pose(jnp.array([2.0, 16.0]), jnp.array(0.0))\n",
     "\n",
     "def grid_search_handler(widget, k, readings):\n",
     "    model_noise = float(getattr(widget.state, \"model_noise\"))\n",
@@ -1351,7 +1351,7 @@
     "    \"grid search\",\n",
     "    grid_search_handler,\n",
     "    result_plots=(\n",
-    "        pose_plots(js(\"$state.grid_poses\"), color=\"green\", opacity=jnp.arange(1.0, 0.0, -1.0/N_keep))\n",
+    "        pose_plots(js(\"$state.grid_poses\"), color=\"green\", opacity=jnp.arange(1.0, 0.0, -1/N_keep))\n",
     "        + pose_plots(js(\"$state.best\"), color=\"purple\")\n",
     "    ),\n",
     "    bottom_elements=(\n",
@@ -1863,7 +1863,7 @@
     "\n",
     "# Set the motion settings\n",
     "degrees = jnp.pi / 180\n",
-    "default_motion_settings = {\"p_noise\": 0.5, \"hd_noise\": 10.0 * degrees}"
+    "default_motion_settings = {\"p_noise\": 0.5, \"hd_noise\": 10 * degrees}"
    ]
   },
   {
@@ -1900,7 +1900,7 @@
     "    tilted_start = Pose(robot_inputs[\"start\"].p, tilted_start_hd)\n",
     "\n",
     "    ds = jnp.linalg.norm(step_vector)\n",
-    "    dhd = (step.hd - tilted_start_hd + jnp.pi) % (2.0 * jnp.pi) - jnp.pi\n",
+    "    dhd = (step.hd - tilted_start_hd + jnp.pi) % (2 * jnp.pi) - jnp.pi\n",
     "\n",
     "    widget.state.update({\n",
     "        \"start\": tilted_start.as_dict(),\n",
@@ -2328,15 +2328,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "key, sub_key = jax.random.split(key)\n",
+    "key, k1, k2 = jax.random.split(key, 3)\n",
     "trace = step_model.simulate(\n",
-    "    sub_key,\n",
+    "    k1,\n",
     "    (default_motion_settings, robot_inputs[\"start\"], robot_inputs[\"controls\"][0]),\n",
     ")\n",
-    "\n",
-    "key, sub_key = jax.random.split(key)\n",
     "rotated_trace, rotated_trace_weight_diff, _, _ = trace.update(\n",
-    "    sub_key, C[\"hd\"].set(jnp.pi / 2.0)\n",
+    "    k2, C[\"hd\"].set(jnp.pi / 2)\n",
     ")\n",
     "\n",
     "(\n",
@@ -2370,12 +2368,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "key, sub_key = jax.random.split(key)\n",
-    "trace = path_model.simulate(sub_key, (robot_inputs[\"start\"], robot_inputs[\"controls\"]))\n",
-    "key, sub_key = jax.random.split(key)\n",
-    "\n",
+    "key, k1, k2 = jax.random.split(key, 3)\n",
+    "trace = path_model.simulate(k1, (robot_inputs[\"start\"], robot_inputs[\"controls\"]))\n",
     "rotated_first_step, rotated_first_step_weight_diff, _, _ = trace.update(\n",
-    "    sub_key, C[0, \"hd\"].set(jnp.pi / 2.0)\n",
+    "    k2, C[0, \"hd\"].set(jnp.pi / 2)\n",
     ")"
    ]
   },
@@ -2477,11 +2473,11 @@
     "\n",
     "motion_settings_low_deviation = {\n",
     "    \"p_noise\": 0.05,\n",
-    "    \"hd_noise\": (1 / 10.0) * degrees,\n",
+    "    \"hd_noise\": (1 / 10) * degrees,\n",
     "}\n",
     "motion_settings_high_deviation = {\n",
     "    \"p_noise\": 0.25,\n",
-    "    \"hd_noise\": 1.0 * degrees,\n",
+    "    \"hd_noise\": 1 * degrees,\n",
     "}\n",
     "\n",
     "key, k_low, k_high = jax.random.split(key, 3)\n",
@@ -3416,7 +3412,7 @@
    "source": [
     "def localization_sis_plus_grid_rejuv(motion_settings, s_noise, M_grid, N_grid, observations):\n",
     "    base_grid = make_poses_grid_array(\n",
-    "        jnp.array([M_grid / 2.0, M_grid / 2.0]).T,\n",
+    "        jnp.array([M_grid / 2, M_grid / 2]).T,\n",
     "        N_grid\n",
     "    )\n",
     "    return SISwithRejuvenation(\n",
@@ -3454,7 +3450,7 @@
    "outputs": [],
    "source": [
     "N_particles = 100\n",
-    "M_grid = jnp.array([0.5, 0.5, (3.0 / 10.0) * degrees])\n",
+    "M_grid = jnp.array([0.5, 0.5, (3 / 10) * degrees])\n",
     "N_grid = jnp.array([15, 15, 15])\n",
     "\n",
     "key, sub_key = jax.random.split(key)\n",
