Insert cell break

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -2482,15 +2482,23 @@
     "\n",
     "key, k_low, k_high = jax.random.split(key, 3)\n",
     "trace_low_deviation = full_model.simulate(k_low, (motion_settings_low_deviation, sensor_settings[\"s_noise\"]))\n",
-    "trace_high_deviation = full_model.simulate(k_high, (motion_settings_high_deviation, sensor_settings[\"s_noise\"]))\n",
-    "\n",
-    "animate_full_trace(trace_low_deviation)"
+    "trace_high_deviation = full_model.simulate(k_high, (motion_settings_high_deviation, sensor_settings[\"s_noise\"]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate_full_trace(trace_low_deviation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "124",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2501,7 +2509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "124",
+   "id": "125",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2512,7 +2520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2530,7 +2538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "126",
+   "id": "127",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -2543,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "128",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2571,7 +2579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "128",
+   "id": "129",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2586,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "130",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2598,7 +2606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "130",
+   "id": "131",
    "metadata": {},
    "source": [
     "It would seem that the fit is reasonable in low motion deviation, but really breaks down in high motion deviation.\n",
@@ -2608,7 +2616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "131",
+   "id": "132",
    "metadata": {},
    "source": [
     "### Producing samples with constraints\n",
@@ -2621,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132",
+   "id": "133",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2639,7 +2647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133",
+   "id": "134",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2654,7 +2662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "134",
+   "id": "135",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2681,7 +2689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "135",
+   "id": "136",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2697,7 +2705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136",
+   "id": "137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2707,7 +2715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137",
+   "id": "138",
    "metadata": {},
    "source": [
     "### Why we need inference: in numbers\n",
@@ -2720,7 +2728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138",
+   "id": "139",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -2782,7 +2790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139",
+   "id": "140",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -2793,7 +2801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "140",
+   "id": "141",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2835,7 +2843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141",
+   "id": "142",
    "metadata": {},
    "source": [
     "## Generic strategies for inference\n",
@@ -2849,7 +2857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "142",
+   "id": "143",
    "metadata": {},
    "source": [
     "### The posterior distribution and importance sampling\n",
@@ -2872,7 +2880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "143",
+   "id": "144",
    "metadata": {},
    "source": [
     "Define the function $\\hat f(z_{0:T})$ of sample values $z_{0:T}$ to be the ratio of probability densities between the posterior distribution $\\text{full}(\\cdot | o_{0:T})$ that we wish to sample from, and the prior distribution $\\text{path}$ that we are presently able to produce samples from.  Manipulating it à la Bayes's Rule gives:\n",
@@ -2900,7 +2908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "144",
+   "id": "145",
    "metadata": {},
    "source": [
     "This reasoning involving `importance` is indicative of the general scenario with conditioning, and fits into the following shape.\n",
@@ -2916,7 +2924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "145",
+   "id": "146",
    "metadata": {},
    "source": [
     "### Sampling / importance resampling\n",
@@ -2939,7 +2947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "146",
+   "id": "147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2981,7 +2989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "147",
+   "id": "148",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -3026,7 +3034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "148",
+   "id": "149",
    "metadata": {},
    "source": [
     "Let's pause a moment to examine this chart. If the robot had no sensors, it would have no alternative but to estimate its position by integrating the control inputs to produce the integrated path in gray. In the low deviation setting, *the sensor data combined with importance sampling is enough* to give accurate results in the low deviation setting.\n",
@@ -3065,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "149",
+   "id": "150",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -3215,7 +3223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "150",
+   "id": "151",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3235,7 +3243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "151",
+   "id": "152",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3255,7 +3263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "152",
+   "id": "153",
    "metadata": {},
    "source": [
     "Below, totality of sampled partial paths are shown in green, those surviving to the end appearing the thickest, while the ground truth is shown in blue."
@@ -3264,7 +3272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "153",
+   "id": "154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3286,7 +3294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154",
+   "id": "155",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -3308,7 +3316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "155",
+   "id": "156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3327,7 +3335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156",
+   "id": "157",
    "metadata": {},
    "source": [
     "As already noted, after winnowing poor quality particles and replacing them with copies of the better ones, particle diversity suffers.  The technique of *rejuvenation* is to perturb the results of resampling to restore this diversity.  At the same time, it can perform operations that improve the sample quality.  In this case, we search a small grid of points near the most recent step for improvement in the score.\n",
@@ -3338,7 +3346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "157",
+   "id": "158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3406,7 +3414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158",
+   "id": "159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3436,7 +3444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "159",
+   "id": "160",
    "metadata": {},
    "source": [
     "The following plots compare the performance of this local grid search rejuvenation scheme (first) versus vanilla sequential importance sampling (second)."
@@ -3445,7 +3453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160",
+   "id": "161",
    "metadata": {},
    "outputs": [],
    "source": [
