Fix `path_model` params

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -1969,7 +1969,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_model = step_model.partial_apply(default_motion_settings).map(diag).scan()"
+    "@genjax.gen\n",
+    "def path_model(motion_settings):\n",
+    "    return (\n",
+    "        step_model\n",
+    "        .partial_apply(motion_settings)\n",
+    "        .map(diag)\n",
+    "        .scan()(robot_inputs[\"start\"], robot_inputs[\"controls\"])\n",
+    "        @ \"steps\"\n",
+    "    )"
    ]
   },
   {
@@ -1988,7 +1996,7 @@
    "outputs": [],
    "source": [
     "key, sub_key = jax.random.split(key)\n",
-    "path_model.propose(sub_key, (robot_inputs[\"start\"], robot_inputs[\"controls\"]))[2]"
+    "path_model.propose(sub_key, (default_motion_settings,))[2]"
    ]
   },
   {
@@ -2020,7 +2028,7 @@
     "    )\n",
     "\n",
     "key, sample_key = jax.random.split(key)\n",
-    "path = path_model.propose(sample_key, (robot_inputs[\"start\"], robot_inputs[\"controls\"]))[2][1]\n",
+    "path = path_model.propose(sample_key, (default_motion_settings,))[2][1]\n",
     "Plot.Frames(\n",
     "    [\n",
     "        plot_path_with_confidence(path, step)\n",
@@ -2051,7 +2059,7 @@
     "key, sub_key = jax.random.split(key)\n",
     "sample_paths = jax.vmap(\n",
     "    lambda k:\n",
-    "        path_model.propose(k, (robot_inputs[\"start\"], robot_inputs[\"controls\"]))[2][1]\n",
+    "        path_model.propose(k, (default_motion_settings,))[2][1]\n",
     ")(jax.random.split(sub_key, N_samples))\n",
     "\n",
     "Plot.html([\n",
@@ -2369,9 +2377,9 @@
    "outputs": [],
    "source": [
     "key, k1, k2 = jax.random.split(key, 3)\n",
-    "trace = path_model.simulate(k1, (robot_inputs[\"start\"], robot_inputs[\"controls\"]))\n",
+    "trace = path_model.simulate(k1, (default_motion_settings,))\n",
     "rotated_first_step, rotated_first_step_weight_diff, _, _ = trace.update(\n",
-    "    k2, C[0, \"hd\"].set(jnp.pi / 2)\n",
+    "    k2, C[\"steps\", 0, \"hd\"].set(jnp.pi / 2)\n",
     ")"
    ]
   },
