Remove redundant jit

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -2643,10 +2643,8 @@
    },
    "outputs": [],
    "source": [
-    "model_importance = jax.jit(full_model.importance)\n",
-    "\n",
     "key, sub_key = jax.random.split(key)\n",
-    "sample, log_weight = model_importance(\n",
+    "sample, log_weight = full_model.importance(\n",
     "    sub_key, constraints_low_deviation, (motion_settings_low_deviation, sensor_settings[\"s_noise\"])\n",
     ")\n",
     "animate_full_trace(sample) | html(\"span.tc\", f\"log_weight: {log_weight}\")"
@@ -2662,7 +2660,7 @@
    "outputs": [],
    "source": [
     "key, sub_key = jax.random.split(key)\n",
-    "sample, log_weight = model_importance(\n",
+    "sample, log_weight = full_model.importance(\n",
     "    sub_key, constraints_high_deviation, (motion_settings_high_deviation, sensor_settings[\"s_noise\"])\n",
     ")\n",
     "animate_full_trace(sample) | html(\"span.tc\", f\"log_weight: {log_weight}\")"
@@ -2761,13 +2759,13 @@
     ")\n",
     "\n",
     "key, sub_key = jax.random.split(key)\n",
-    "trace_path_integrated_observations_low_deviation, w_low = model_importance(\n",
+    "trace_path_integrated_observations_low_deviation, w_low = full_model.importance(\n",
     "    sub_key,\n",
     "    constraints_path_integrated_observations_low_deviation,\n",
     "    (motion_settings_low_deviation, sensor_settings[\"s_noise\"]),\n",
     ")\n",
     "key, sub_key = jax.random.split(key)\n",
-    "trace_path_integrated_observations_high_deviation, w_high = model_importance(\n",
+    "trace_path_integrated_observations_high_deviation, w_high = full_model.importance(\n",
     "    sub_key,\n",
     "    constraints_path_integrated_observations_high_deviation,\n",
     "    (motion_settings_high_deviation, sensor_settings[\"s_noise\"]),\n",
@@ -2818,7 +2816,7 @@
     "key, sub_key = jax.random.split(key)\n",
     "\n",
     "traces_generated_low_deviation, low_weights = jax.vmap(\n",
-    "    model_importance, in_axes=(0, None, None)\n",
+    "    full_model.importance, in_axes=(0, None, None)\n",
     ")(\n",
     "    jax.random.split(sub_key, N_samples),\n",
     "    constraints_low_deviation,\n",
@@ -2826,7 +2824,7 @@
     ")\n",
     "\n",
     "traces_generated_high_deviation, high_weights = jax.vmap(\n",
-    "    model_importance, in_axes=(0, None, None)\n",
+    "    full_model.importance, in_axes=(0, None, None)\n",
     ")(\n",
     "    jax.random.split(sub_key, N_samples),\n",
     "    constraints_high_deviation,\n",
@@ -2959,17 +2957,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_presamples = 2000\n",
-    "N_samples = 20\n",
-    "\n",
-    "def importance_sample(\n",
+    "def importance_resample_unjitted(\n",
     "    key: PRNGKey, constraints: genjax.ChoiceMap, motion_settings, s_noise, N: int, K: int\n",
     "):\n",
     "    \"\"\"Produce K importance samples of depth N from the model. That is, K times, we\n",
     "    generate N importance samples conditioned by the constraints, and categorically\n",
     "    select one of them.\"\"\"\n",
     "    key1, key2 = jax.random.split(key)\n",
-    "    samples, log_weights = jax.vmap(model_importance, in_axes=(0, None, None))(\n",
+    "    samples, log_weights = jax.vmap(full_model.importance, in_axes=(0, None, None))(\n",
     "        jax.random.split(key1, N * K), constraints, (motion_settings, s_noise)\n",
     "    )\n",
     "    winners = jax.vmap(genjax.categorical.propose)(\n",
@@ -2981,17 +2976,16 @@
     "    selected = jax.tree.map(lambda x: x[winners], samples)\n",
     "    return selected\n",
     "\n",
+    "importance_resample = jax.jit(importance_resample_unjitted, static_argnums=(4, 5))\n",
     "\n",
-    "jit_resample = jax.jit(importance_sample, static_argnums=(4, 5))\n",
     "\n",
-    "key, sub_key = jax.random.split(key)\n",
-    "low_posterior = jit_resample(\n",
-    "    sub_key, constraints_low_deviation, motion_settings_low_deviation, sensor_settings[\"s_noise\"], N_presamples, N_samples\n",
-    ")\n",
-    "key, sub_key = jax.random.split(key)\n",
-    "high_posterior = jit_resample(\n",
-    "    sub_key, constraints_high_deviation, motion_settings_high_deviation, sensor_settings[\"s_noise\"], N_presamples, N_samples\n",
-    ")"
+    "def path_to_polyline(path, **options):\n",
+    "    if len(path.p.shape) > 1:\n",
+    "        x_coords = path.p[:, 0]\n",
+    "        y_coords = path.p[:, 1]\n",
+    "        return Plot.line({\"x\": x_coords, \"y\": y_coords}, {\"curve\": \"linear\", **options})\n",
+    "    else:\n",
+    "        return Plot.dot([path.p], fill=options[\"stroke\"], r=2, **options)"
    ]
   },
   {
@@ -3003,13 +2997,16 @@
    },
    "outputs": [],
    "source": [
-    "def path_to_polyline(path, **options):\n",
-    "    if len(path.p.shape) > 1:\n",
-    "        x_coords = path.p[:, 0]\n",
-    "        y_coords = path.p[:, 1]\n",
-    "        return Plot.line({\"x\": x_coords, \"y\": y_coords}, {\"curve\": \"linear\", **options})\n",
-    "    else:\n",
-    "        return Plot.dot([path.p], fill=options[\"stroke\"], r=2, **options)\n",
+    "N_presamples = 2000\n",
+    "N_samples = 20\n",
+    "\n",
+    "key, k1, k2 = jax.random.split(key, 3)\n",
+    "low_posterior = importance_resample(\n",
+    "    k1, constraints_low_deviation, motion_settings_low_deviation, sensor_settings[\"s_noise\"], N_presamples, N_samples\n",
+    ")\n",
+    "high_posterior = importance_resample(\n",
+    "    k2, constraints_high_deviation, motion_settings_high_deviation, sensor_settings[\"s_noise\"], N_presamples, N_samples\n",
+    ")\n",
     "\n",
     "(\n",
     "    world_plot\n",
