--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -2744,11 +2744,10 @@
     "    c_ps = jax.vmap(lambda ix, p: C[\"steps\", ix, \"pose\", \"p\"].set(p))(\n",
     "        jnp.arange(T), path.p\n",
     "    )\n",
-    "\n",
     "    c_hds = jax.vmap(lambda ix, hd: C[\"steps\", ix, \"pose\", \"hd\"].set(hd))(\n",
     "        jnp.arange(T), path.hd\n",
     "    )\n",
-    "    return c_ps + c_hds\n",
+    "    return c_ps | c_hds\n",
     "\n",
     "constraints_path_integrated = constraint_from_path(path_integrated)\n",
     "constraints_path_integrated_observations_low_deviation = (\n",
