Remove accidental key reuse

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -2757,15 +2757,14 @@
     "    constraints_path_integrated | constraints_high_deviation\n",
     ")\n",
     "\n",
-    "key, sub_key = jax.random.split(key)\n",
+    "key, k1, k2 = jax.random.split(key, 3)\n",
     "trace_path_integrated_observations_low_deviation, w_low = full_model.importance(\n",
-    "    sub_key,\n",
+    "    k1,\n",
     "    constraints_path_integrated_observations_low_deviation,\n",
     "    (motion_settings_low_deviation, sensor_settings[\"s_noise\"]),\n",
     ")\n",
-    "key, sub_key = jax.random.split(key)\n",
     "trace_path_integrated_observations_high_deviation, w_high = full_model.importance(\n",
-    "    sub_key,\n",
+    "    k2,\n",
     "    constraints_path_integrated_observations_high_deviation,\n",
     "    (motion_settings_high_deviation, sensor_settings[\"s_noise\"]),\n",
     ")\n",
@@ -2812,20 +2811,18 @@
    "source": [
     "N_samples = 200\n",
     "\n",
-    "key, sub_key = jax.random.split(key)\n",
-    "\n",
+    "key, k1, k2 = jax.random.split(key, 3)\n",
     "traces_generated_low_deviation, low_weights = jax.vmap(\n",
     "    full_model.importance, in_axes=(0, None, None)\n",
     ")(\n",
-    "    jax.random.split(sub_key, N_samples),\n",
+    "    jax.random.split(k1, N_samples),\n",
     "    constraints_low_deviation,\n",
     "    (motion_settings_low_deviation, sensor_settings[\"s_noise\"]),\n",
     ")\n",
-    "\n",
     "traces_generated_high_deviation, high_weights = jax.vmap(\n",
     "    full_model.importance, in_axes=(0, None, None)\n",
     ")(\n",
-    "    jax.random.split(sub_key, N_samples),\n",
+    "    jax.random.split(k2, N_samples),\n",
     "    constraints_high_deviation,\n",
     "    (motion_settings_high_deviation, sensor_settings[\"s_noise\"]),\n",
     ")\n",
@@ -3304,42 +3301,32 @@
    },
    "outputs": [],
    "source": [
-    "N_particles = 100\n",
+    "key, k1, k2 = jax.random.split(key, 3)\n",
     "\n",
-    "key, sub_key = jax.random.split(key)\n",
+    "N_particles = 100\n",
     "sis_result = localization_sis(\n",
     "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], observations_high_deviation\n",
-    ").run(sub_key, N_particles)\n",
+    ").run(k1, N_particles)\n",
     "\n",
-    "(\n",
-    "    html([\"div\", \"SIS on high motion-deviation data\"])\n",
-    "    | plot_sis_result(path_high_deviation, sis_result)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "156",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "N_particles = 20\n",
-    "\n",
-    "key, sub_key = jax.random.split(key)\n",
     "sis_result = localization_sis(\n",
     "    motion_settings_low_deviation, sensor_settings[\"s_noise\"], observations_low_deviation\n",
-    ").run(sub_key, N_particles)\n",
+    ").run(k2, N_particles)\n",
     "\n",
     "(\n",
-    "    html([\"div\", \"SIS on low motion-deviation data\"])\n",
-    "    | plot_sis_result(path_low_deviation, sis_result)\n",
+    "    (\n",
+    "        html([\"div\", \"SIS on high motion-deviation data\"])\n",
+    "        | plot_sis_result(path_high_deviation, sis_result)\n",
+    "    ) & (\n",
+    "        html([\"div\", \"SIS on low motion-deviation data\"])\n",
+    "        | plot_sis_result(path_low_deviation, sis_result)\n",
+    "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "157",
+   "id": "156",
    "metadata": {},
    "source": [
     "As already noted, after winnowing poor quality particles and replacing them with copies of the better ones, particle diversity suffers.  The technique of *rejuvenation* is to perturb the results of resampling to restore this diversity.  At the same time, it can perform operations that improve the sample quality.  In this case, we search a small grid of points near the most recent step for improvement in the score.\n",
@@ -3350,7 +3337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158",
+   "id": "157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3418,7 +3405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "159",
+   "id": "158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3448,7 +3435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160",
+   "id": "159",
    "metadata": {},
    "source": [
     "The following plots compare the performance of this local grid search rejuvenation scheme (first) versus vanilla sequential importance sampling (second)."
@@ -3457,7 +3444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "161",
+   "id": "160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3465,13 +3452,13 @@
     "M_grid = jnp.array([0.5, 0.5, (3 / 10) * degrees])\n",
     "N_grid = jnp.array([15, 15, 15])\n",
     "\n",
-    "key, sub_key = jax.random.split(key)\n",
+    "key, k1, k2 = jax.random.split(key, 3)\n",
     "sis_result = localization_sis(\n",
     "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], observations_high_deviation\n",
-    ").run(sub_key, N_particles)\n",
+    ").run(k1, N_particles)\n",
     "smcp3_result = localization_sis_plus_grid_rejuv(\n",
     "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], M_grid, N_grid, observations_high_deviation\n",
-    ").run(sub_key, N_particles)\n",
+    ").run(k2, N_particles)\n",
     "\n",
     "(\n",
     "    (\n",
